# AddModules

./: .gitignore  CMakeLists.txt  usage.txt
src/: main.cpp
src/cli/: parser.cpp  parser.hpp
src/commands/: about.cpp  commands.hpp  help.cpp  install.cpp  list.cpp  show.cpp  uninstall.cpp
src/execute/: execute.h  execute.hpp  install_module.cpp
src/tools/: executable_path.hpp  progress_bar.hpp  write_file.hpp
src/utils/: executable_path.hpp
